tests/tooling/fixtures/native/recovery/negative/negative_do_while_mixed_condition_and_control.objc3
// Expected diagnostic code(s): O3S206, O3S213.
module NegativeDoWhileMixedConditionAndControl;

fn ready() -> bool {
  return true;
}

fn main() -> i32 {
  do {
    let i = 1;
  } while (ready);
  continue;
  return 0;
}

